Move the scim-client module to scim-ri. This entire module will be included in the scim-ri zip assembly. End users will need to build the client with Maven similar to the previous build.xml that was included with the client.
JiraIssue: SCIM-38